# loman

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .rhiza.env  .rhiza.history  .travis.yml  ANALYSIS_REPORT.md  AUTHORS  CHANGELOG.md  CHANGELOG.rst  COPYING  LICENSE  MIGRATION_PLAN.md  Makefile  PLAN.md  QUALITY.md  README.md  README.rst  SECURITY.md  SERIALIZATION.md  __init__.py  computeengine.py  mkdocs.yml  pyproject.toml  pyproject.toml.template  pytest.ini  requirements.txt  ruff.toml  setup.py  test_computeengine.py
.devcontainer/: bootstrap.sh  devcontainer.json  setup-task.sh  setup-uv.sh  startup.sh
.github/: dependabot.yml  template.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/agents/: agentic.mk  tests.md
.github/rhiza/: template.yml
.github/rhiza/actions/setup-project/: action.yml
.github/rhiza/scripts/customisations/: build-extras.sh
.github/scripts/: build-extras.sh
.github/workflows/: _devcontainer.yml  book.yml  ci.yml  copilot-setup-steps.yml  deptry.yml  devcontainer.yml  jupyter.yml  pre-commit.yml  release.yml  renovate_rhiza_sync.yml  rhiza_benchmark.yml  rhiza_benchmarks.yml  rhiza_book.yml  rhiza_ci.yml  rhiza_codeql.yml  rhiza_deptry.yml  rhiza_devcontainer.yml  rhiza_docker.yml  rhiza_marimo.yml  rhiza_mypy.yml  rhiza_pre-commit.yml  rhiza_release.yml  rhiza_sync.yml  rhiza_validate.yml  rhiza_weekly.yml  security.yml  structure.yml  sync-configs.yml
.rhiza/: .cfg.toml  INDEX.md  history  rhiza.mk  template-bundles.yml  template.yml
.rhiza/completions/: README.md
.rhiza/make.d/: 00-additional-deps.mk  book.mk  bootstrap.mk  docs.mk  test.mk  tutorial.mk
.rhiza/requirements/: tests.txt  tools.txt
.rhiza/scripts/customisations/: build-extras.sh
.rhiza/tests/: conftest.py
.rhiza/tests/api/: conftest.py  test_makefile_api.py  test_makefile_targets.py
.rhiza/tests/integration/: test_book_targets.py  test_lfs.py
.rhiza/tests/stress/: test_git_stress.py  test_makefile_stress.py
.rhiza/tests/structure/: test_lfs_structure.py  test_pyproject.py
.rhiza/tests/sync/: conftest.py
.rhiza/utils/: suppression_audit.py
book/: book.mk
book/marimo/: cdos.py  interest_rate_swaps.py  marimo.mk  portfolio.py
book/marimo/notebooks/: cdos.py  interest_rate_swaps.py  portfolio.py
docs/: CUSTOMIZATION.md  GLOSSARY.md  Makefile  QUICK_REFERENCE.md  api.md  api.rst  conf.py  index.md  index.rst  make.bat  notebooks.md  requirements.txt
docs/dev/: release.md  release.rst
docs/guides/: EXTENDING_RHIZA.md
docs/notebooks/: cdos.py  interest_rate_swaps.py  pipeline_example.py  serialization.py  validation_and_planning.py
docs/reference/: ARCHITECTURE.md  DEPENDENCIES.md  SHELL_SCRIPTS.md  TOOLS_REFERENCE.md
docs/user/: advanced.md  advanced.rst  install.md  install.rst  intro.md  intro.rst  quickstart.md  quickstart.rst  strategies.md  strategies.rst
docs/user/features/: creating_nodes_using_decorators.md  features.md  index.md  non_string_node_names.md
docs/user/features/creating/: adding_nodes_using_decorators.md  automatically_expanding_named_tuples.md  computation_utilities.md  (+5 more)
examples/: CDOs.ipynb  Example - Using Loman to Price Interest Rate Swaps.ipynb  Example - Using Loman to Value CDOs.ipynb  Example - Using Loman to Value a Portfolio.ipynb  InterestRateSwaps.ipynb  Portfolio.ipynb
loman/: __init__.py  compat.py  computeengine.py  consts.py  exception.py  nodekey.py  path_parser.py  structs.py  util.py  visualization.py
loman/serialization/: __init__.py  transformer.py
loman/test/: standard_test_computations.py  test_class_style_definition.py  test_computeengine.py  test_computeengine_structure.py  test_value_eq.py  test_visualization.py
presentation/: README.md
src/loman/: __init__.py  compat.py  computeengine.py  consts.py  exception.py  graph_utils.py  nodekey.py  planning.py  util.py  visualization.py
src/loman/serialization/: __init__.py  computation.py  default.py  transformer.py
test/: standard_test_computations.py  test_blocks.py  test_class_style_definition.py  test_computeengine.py  test_computeengine_structure.py  test_converters.py  test_dill_serialization.py  test_loman_tree_functions.py  test_metadata.py  test_nodekeys.py  test_path_parser.py  test_serialization.py  test_value_eq.py  test_visualization.py
tests/: Makefile.tests  __init__.py  conftest.py  standard_test_computations.py  test_blocks.py  test_class_style_definition.py  test_compat.py  test_computeengine.py  test_computeengine_structure.py  test_consts.py  test_converters.py  test_coverage_gaps.py  test_dill_serialization.py  test_exception.py  test_graph_utils.py  test_loman_tree_functions.py  test_metadata.py  test_nodekeys.py  test_planning.py  test_serialization.py  test_typing.py  test_util.py  test_value_eq.py  test_visualization.py  tests.mk
tests/benchmarks/: conftest.py
tests/test_rhiza/: conftest.py  test_docstrings.py  test_makefile.py  test_makefile_api.py  test_notebooks.py  test_release_script.py  test_requirements_folder.py  test_structure.py
(+13 files in other folders)
