[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loman"
version = "0.5.3"
authors = [
  { name="Ed Parcell", email="edparcell@gmail.com" },
]
description = "Loman tracks state of computations, and the dependencies between them, allowing full and partial recalculations."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries"
]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "decorator",
    "matplotlib",
    "numpy",
    "pydotplus",
    "dill >= 0.2.5",
    "networkx >= 2.0",
    "pandas >= 0.19.2"
]

[project.optional-dependencies]
test = [
    "attrs",
    "pytest"
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.12.0",
    "pre-commit>=3.0",
    "mypy>=1.0",
    "marimo>=0.15",
    "scipy>=1.16.3",
    "yahoo-finance>=1.4.0",
    "beautifulsoup4>=4.14.2"
]

[project.urls]
Homepage = "https://github.com/janusassetallocation/loman"

[tool.hatch.build.targets.wheel]
packages = ["src/loman"]

[tool.deptry]
known_first_party = ["loman"]
pep621_dev_dependency_groups = ["test", "dev"]
per_rule_ignores = {DEP002 = ["pytest", "pytest-cov", "ruff", "pre-commit", "mypy", "marimo", "attrs"], DEP004 = ["attrs"]}

[tool.deptry.package_module_name_map]
pre-commit = "pre_commit"
pytest-cov = "pytest_cov"
matplotlib = "matplotlib"
pydotplus = "pydotplus"
decorator = "decorator"
networkx = "networkx"
marimo = "marimo"
pandas = "pandas"
pytest = "pytest"
attrs = "attrs"
numpy = "numpy"
mypy = "mypy"
ruff = "ruff"
dill = "dill"
