[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loman"
version = "0.6.0"
authors = [
  { name="Ed Parcell", email="edparcell@gmail.com" },
]
description = "Loman tracks state of computations, and the dependencies between them, allowing full and partial recalculations."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries"
]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "decorator>=4.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pydotplus>=2.0",
    "dill >= 0.3.8",
    "networkx >= 2.6",
    "pandas >= 2.2",
    "attrs >= 25.0"
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "mypy>=1.0",
    "marimo>=0.15",
    "scipy>=1.16.3",
]
test = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
]
lint = [
    "ruff>=0.12.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/janusassetallocation/loman"
Repository = "https://github.com/janusassetallocation/loman"

[tool.hatch.build.targets.wheel]
packages = ["src/loman"]

[tool.deptry.package_module_name_map]
matplotlib = "matplotlib"
pydotplus = "pydotplus"
decorator = "decorator"
networkx = "networkx"
marimo = "marimo"
pandas = "pandas"
scipy = "scipy"
attrs = "attrs"
numpy = "numpy"
mypy = "mypy"
ruff = "ruff"
dill = "dill"

[tool.bandit]
skips = ["B301", "B403", "B404"]

[tool.interrogate]
ignore-overloaded-functions = true
